secondfile/objects/DHStatus_DNS_Dragon_Update_Details__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-DNS Dragon Update Details</description>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_DetailsID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DHStatus - Update Deal Hash DetailsID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus - Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus-DNS Dragon Update Details</relationshipLabel>
        <relationshipName>DHStatus_DNS_Dragon_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus – Update IDH</label>
        <referenceTo>DHStatus_Update_IDH__c</referenceTo>
        <relationshipLabel>DHStatus-DNS Dragon Update Details</relationshipLabel>
        <relationshipName>DHStatus_DNS_Dragon_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNS_Dragon_Notification_Time_Stamp__c</fullName>
        <label>DNS Dragon Notification Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTimeStamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-DNS Dragon Update Details</label>
    <nameField>
        <displayFormat>DNS-{00000}</displayFormat>
        <label>DHStatus-DNS Dragon Update Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-DNS Dragon Update Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>